--- a/Ondrej_Sika_Moje_vize_Sede_Strely_2016_II.tex
+++ b/Ondrej_Sika_Moje_vize_Sede_Strely_2016_II.tex
@@ -1,4 +1,4 @@
-% Ondrej Sika: Moje vize Sede Strely 2016
+% Ondrej Sika: Moje vize Sede Strely 2016 II
 % https://ondrejsika.com/scout/sedastrela/Ondrej_Sika_Moje_vize_Sede_Strely_2016_II.pdf
 % Author: Ondrej Sika <ondrej@ondrejsika.com>
 
@@ -18,9 +18,164 @@
 {\large Ondrej Sika {\tt <ondrej@ondrejsika.com>}}\\
 \vspace*{0.3cm}
 23. 7. 2016\\
+\vspace*{0.8cm}
 \end{center}
 
 % BODY
+
+Letos pisi jiz druhou vizi, prvni se nepodarila temner nijak prosadit. Mozna proto ze jsem si ji nechal pro sebe. Ted, jako budouci vudce mam prijemny pocit, ze ji spolecnymi silami dokazeme naplnit.
+
+Vcera byla posledni ze serie rad, ktera definitivne zmenila vedeni Sede Strely a ja verim ze Sedou Strelu nesklameme.
+
+\section{Oddil}
+
+V prvni rade bych rad nastavil smer, kterym by se oddil mel ubirat. V posledni dobe jsme nesli spatnym smerem, nesli jsme zadnym. Nemeli jsme zadnou vizi ani akcni plan, jakym smerem mame nas oddil smerovat.
+
+Chci vratit nasemu oddilu skautskeho ducha, ktery se z oddilu postupne vytracel. A vytratil. Musime znuvu zavest nase skautske zvyky a tradice, zamerit se na stezku a zit vice skautskym zivotem.
+
+Jsme skautsky oddil a chci aby to tak bylo, se vsim, co k tomu patri.
+
+\section{Oddilova rada}
+
+Oddilova rada ma 2 casti, starsi a mladsi cleny. Starsi oddilova rada je zodpovedna za oddil a vsechno co se v nem deje, mladsi oddilova rada pomaha s programem a chodem oddilu obecne.
+
+Starsi oddilova rada probira vsechny zasadni kroky smerovani i cinnosti oddilu, kazdy hlas clena ma stejnou vahu. Vudce oddilu ma posledni slovo a plnou zodpovednost za vysledne jednani.
+
+Musime si rozdelit kompetence a dilci zodpovednosti, v tom systemu se nam bude lepe pracovat a budeme dosahovat lepsich vysledku. Finalni zodpovednost je stale na vudci oddilu.
+
+Idelni by bylo, abychom se schazeli (alespon online) kazdy mesic a agilne resili vsechny situace, ktere budou potreba resit v tomto kruhu. Vym, ze to bude obtizne, kazdy jsme jinde, ale verim ze to zvladneme.
+
+Bylo by dobre mit nektere rady oddelene a nektere dohromady s mladsimy kluky. Nejsme na stejne urovni a musime to respektovat.
+
+Dulezite veci vzdy pujdou emailem a bude upozorneni na Facebookove skupine, primarni komunikaci chci z duvodu prehlednosti drzet mimo facebook. Mailing list nebo nejake forum.
+
+\section{Pravidla}
+
+Myslim ze je nutne zavest si par zakladnich pravidel, ktere bychom meli striktne dodrzovat.
+
+\begin{enumerate}
+\item Zadny alkohol na skautskych akcich a v klubovne
+\item Slusna mluva na skautskych akcich
+\item Zadna sikana ze strany vedeni k detem
+\item Odpovednost a komunikace ve vsech situacich, obzvlast v tech tezkych
+\end{enumerate}
+
+Dale si opet zavest mene striktni pravidla, ktere jsou ve skautskych oddilech hezka.
+
+\begin{enumerate}
+\item Pokrik na konci akce
+\item Sloup ucasti (pocitat ucast na akcich)
+\end{enumerate}
+
+Urcite to nejsou vsechny pravidla co je potreba zavest, ale je to to co nas asi nejvice pali. Urcite jich pribydle jeste mnoho, tyto me napadly prave ted.
+
+\section{Stredisko}
+
+Na stredisku nas oddil radi nemaji, vubec se tomu nedivim. Porad jsme je jen hejtovaly a vsechno jsme delali spatne a pozde. Pro existenci oddilu je velmi nutny mit dobry vstah s nasi nadrazenou organizaci a lidmi v ni. Neznam nikoho ve stredisku kdo by sel proti nam osobne, vsichni jdou proti stylu naseho soucasneho vedeni.
+
+Na strediskove urovni by nas oddil mel vystupovat jednotne. I prez nase vnitrni nazorove neshody bychom meli smerem ke stredisku vystupovat jednotnotnym a silnym nazorem.
+
+Dale se musime dbat na strikni dodrzovani terminu, musime ukazat ze to dokazeme. Za posledni dobu jsme v tomto smeru toho moc nepredvedli.
+
+Musime se ucastnit vsech strediskovych rad a snazit se vratit duveru v nas oddil v ocich strediska.
+
+\section{Druzinovky}
+
+O druzinovkach moc nevim, nemam vlastni pohled. Coz je velike minus a skoda, chci to v pristim roce napravit. Stihat alespon jednu druzinovku za mesic. To neni nerealny cil.
+
+Z doslechu vim o druzinovkach jen to, ze je vede Tatik a vede je sakra dobre. Tomu vsechna cest. Ale presto si myslim, ze je muzeme o kousek posunout k lepsimu.
+
+Nevim jak moc se roveri zapojuji do tvorby programu, ale byl bych rad kdyz by se zapojovali. Idealni stav je podle me program v rukou roveru a koncept v Tatikovo.
+
+Uz mockrat jsme zkouseli celorocni hru, kdyz jsem byl vlce ja, takovou hru jsme hrali a ja s ni byl spokojen - jen nedokazu ric co si o ni myslel ten kdo ji pripravyl. Kdyz jsme s Vojtou zacali delat druzinovky, zkouseli jsme to take, ale moc nam to nevyslo. Opet je to nas pohled, treba to deti vydeli jinak i kdyz trvala jen par mesicu.
+
+Ja jsem pro to zkusit celorocni hru, idealne zakoncenou taborem, ale nemyslim si ze je to nutnost. Bylo by to ovsem hezke.
+
+Tatik zavedl koncept specialnich druzinovek, mimo klubovnu, naprikad v bazenu nebo v techmanii. Tento koncept mam podle me skvely potencial a mely bychom mu dat vice prostoru. Jednou za mesic az za dva by to podle me bylo optimalni.
+
+Na druzinovkach bychom meli dat prostor stezkam a skautskym dovednostem, tak i pripravou na ruzne skautske souteze a zavody.
+
+
+\section{Vypravy}
+
+Vypravy delame podle meho dobre, nedelame symbolicke ramce jako delal Tomek, ale myslim ze to mame dobre i bez nich.
+
+Problem nasich vyprav je nedostatek deti, ten podle meho nazoru plyne z ne uplne danych terminu, terminy vymislime na posledni chvili. To bychom meli napravit, sednout si k tomu a pevne nastavit vypravy na celi rok dopredu (nebo alespon na pul roku). To si myslim, ze muze zvednout ucast deti na vypravach.
+
+Vypravy a jejich terminy musime dobre zkomunikovat s rodici, na zacatku roku souhrny email se vsemi vikendy a potom treba 30dni, 14 dni, 7 dni a 1 den dopredu, s tim ze v emailu by meli byt tlacitka jako potvrzuji ucast a neucastnim se. Osobne by se mi libila moznost zaplatit vypravu online.
+
+Idealni pocet vyprav je jedna vyprava mesicne, idealni jsou vypravy dvoudenni. V jakem pomeru delat dvoudenni a jednodeni vypravy netusim.
+
+
+\section{Tabor}
+
+Tabor je kapitola sama pro sebe, je nutne ji vice rozebrat, asi v samostatne vizi. Zde proto jen par slov o tom, co je potreba ohledne taboru prez rok.
+
+Pripravu posledniho tabora jsme dost podcenili, meli bychom s ni zacit hned zacatkem roku. Budeme pak mit moznost smerovat program druzinovek nejakemu konceptu tabora a budeme mit hodne casu zjistit vetsinu problemu, ktere resime na posledni chvili.
+
+Muzeme vyuzit deti na druzinovkach k dukladnym prohlidkam stavu materialu na tabor a i napadu na program tabora.
+
+Naprosto me uchvatila priprava CTH u Jizniho Krize, kde mely i piano ktete hralo (vyrobene z kartonovych krabic). Nerikam ze to musime delat presne takhle, ale neco podobneho za poslednich 14 dni proste zvladnout nemuzeme.
+
+
+\section{Klubovna}
+
+Dalsi velkou kapitolou je nase klubovna, je to nejkrasnejsi klubovna ve stredisku, ale my jsme se k ni nechovali moc dobre. Byla pro nas mistem kde jsme poradali alkoholove vecirky a to si myslim ze neni projev ucty k nasemu oddilu a skautingu obecne.
+
+Na nasi klubovne je hodne prace, meli bychom uklidit oba sklady a vyhazet veci, ktere nikdo nikdy nepouzije. A takove veci dale nehromadit.
+
+Na klubovne bude hromada prace, proto by bylo dobre trosku udelat na druzinovkach a zbytek na brigadach, kterych by melo byt ze zacatku vice, ovsem musime uvazovat racionalne s nasi casovou dispozici, takze tak 2 az 4 za rok by bylo super.
+
+Musime v nasem naradi a materialu udelat poradek aby se nam nestalo ze misto dvou dobrych stanu vezmeme jeden spatny.
+
+Protridit vudcovku a doplnit satky, stezky a ruzne odborky. Nesmi se nam stat, ze ve slibovy den zjistime ze nemame odznaky.
+
+Obnovme lesk a sarm nasi klubovny stejne jako naseho oddilu. Zaslouzi si to.
+
+\section{Souteze}
+
+Pamatuji si ze jako vlce jsme chodili na mnoho soutezi, to v posledni dobe opadlo. Je skoda neukazovat Sedou Strelu ve svetle, ktere by ji velmi pomohlo. Pritom to nemusi byt tak slozite, najit par skautskych soutezi jako je Knapak nebo Zavod vlcat. Priprava na tyto souteze je i hezka skautska cinnost na druzinovkach jako je Morseova abeceda, semafor a nebo kimovka.
+
+Pokud bychom meli hodne energie a odvahy, muzem se pokusit neco usporadat, ale v prvnich chvilich bych se do toho nehrnul - mame jine prace nad hlavu.
+
+
+\section{Propagace}
+
+Nas oddlil je nutne propagovat. V dnesnim svete hlavne online. Nejsem marketingovy specialista, mozna me Kuba doplni nebo opravi, ale chtel bych oddil propagovat temito kanaly: Web, Blog, Facebook, Instagram, Fotogalerie (Flicker).
+
+Na nasem webu musime mit aktualni a citelne informace o deni a pro nove cleny. Psat blog mi prijde v dnesni dobe lepsi nez psat kroniku - ona to vlastne je takova verena kronika.
+
+Dale si myslim ze fotky maji pozitivni vliv, nastesti o ne nemame nouzi.
+
+
+\section{Nabor}
+
+Nabor novych clenu musime bohuzel resit. Idelanim stavem je to ze se o nej nebudeme muset starat a novy clenove k nam budou chodit sami. V te situaci nejspis dlouho nebudeme.
+
+Nabirame deti od prvni do cca 5 tridy zakladni skoly, meli bychom zapusobit hlavne na rodice, kteri maji posledni slovo v tom co jejich deti budou a nebudou delat.
+
+Cilil bych na rodice deti z Bor v danem veku.
+
+Zameril bych se na online kampan na Facebooku, myslim ze s dobrym nacilenim muzeme udelat divi. Stejne tak bych roznesl letacky do skol a pokusil se to dostat k rodicum touto cestou - i kdyz se neda merit uspesnost.
+
+
+\section{Komunikace s rodici}
+
+Nevim jak efektivni je komunikace s rodici ted, ale kdyz ctu nektere emaily tak myslim ze moc ne.
+
+Za prve bych udelal podrobny adresar vsech kontaktu na rodice (email, telefon) abychom mohli efektivne komunikovat vse co je potreba. Tento seznam by bylo dobre mit vytisteny na vsech akcich - myslim ze to v hodne situacich muze pomoct.
+
+Komunikaci bych smeroval primarne emailem, prez CRM a prez Google Groups. V dnesni dobe neni efektivni (ani slusne) posilat email s desitkami adresatu.
+
+V CRM vidim vyhodu ze budeme mit komunikaci vsichni na ocich a nebude dochazet k ruznym preslapum jako dvoum odpovedim na stejny dotaz a podobne.
+
+Komunikaci ohledne vyprav je potreba automatizovat uplne, aby jsme se nemuseli starat o veci, ktere se daji vyresit jednou a neni potreba na ne porad myslet. Ze zacatku to ovsem muzeme delat rucne.
+
+\section*{Zaver}
+
+Kdyz pisu tuto vizi, dost to na me doleha. Jak moc jsme Sede Strele ublizily a jak velka je nutnost s tim ted neco delat. Jak nekdo pronesl na rade, pocet deti je zrcadlem kvality oddilu. Uz chapu proc ma Jizni Kriz deti mnoho a my jen malo. Muzeme za to sami.
+
+A jak vidim oddil za rok za 3 a az to budu predavat? No, za rok doufam ze ziskame spatky duveru strediska a zlepsime program, hlavne tabor. Za 3 roky myslim ze budeme mit vice deti a velkou cast procesu automatizovanou a skvele pripravene soucasne rovery k prevzeni oddilu. Az budu predavat oddil, chci aby byl v nejepsi fazi meho vedeni a chci aby byl dobre a silne nasmerovan k jeste zarivejsi budoucnosti.
 
 -- Ondrej
 
